--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,46 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Poppins', sans-serif;
+  color: #3B4B5B;
 }
 
+/* ROOT COLORS */
+:root {
+  --btn-primary: #015BD7;
+  --header-primary: #EEF6FE;
+  --primary-color: #ffffff;
+  --secondary-color: #3B4B5B;
+}
+
+/* DARK THEME COLORS */
+.dark-theme {
+  --btn-primary: #133B73;
+  --header-primary: #161616;
+  --primary-color: #0D0D0D;
+  --secondary-color: #CFCFCF;
+}
+
+/* LINK STYLES */
 a {
   color: inherit;
   text-decoration: none;
 }
 
+/* a.active, a:hover {
+
+} */
+
 * {
   box-sizing: border-box;
+  /* border: 1px solid red; */
+}
+
+li {
+  list-style: none;
+}
+
+@media screen and (max-width = 768px) {
+  
+	
 }
