--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -5,9 +5,15 @@
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 	margin-top: 40px;
-    margin-bottom: 40px;
+	margin-bottom: 40px;
 }
 
+.footer1 ul li,
+.footer2 ul li,
+.footer3 ul li {
+	list-style: none;
+}
+ 
 .footer1 {
 	display: flex;
 	flex-direction: column;
@@ -36,6 +42,23 @@
 	font-size: 0.875rem;
 }
 
-.footer2, .footer3 {
+.footer2,
+.footer3 {
 	margin-top: 75px;
+}
+
+@media screen and (max-width:425px) {
+	.footer {
+		flex-direction: column;
+	}
+
+	.footer2 {
+		margin-top: 0;
+		font-size: 0.875rem;
+	}
+
+	.footer3 {
+		margin-top: 0;
+		font-size: 0.875rem;
+	}
 }
