--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -140,7 +140,7 @@
 }
 
 .aboutServicesOne a {
-	font-size: 0.875rem;
+	font-size: 0.775rem;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -177,8 +177,16 @@
 	font-size: 0.875rem;
 }
 
+.content h1 {
+	font-size: 2.5rem;
+}
+
+.servicesTwo {
+	font-size: 2.5rem;
+}
+
 .servicesTwoImage {
-	margin-right: 50px;
+	/* margin-right: 50px; */
 }
 
 .aboutServicesTwo {
@@ -190,7 +198,6 @@
 /* PRICING */
 /* Pricing Section */
 .pricingSection {
-	height: 131px;
 	margin-top: 90px;
 }
 
@@ -501,6 +508,10 @@
 		margin-bottom: 20px;
 	}
 
+	.pricingSection {
+		margin-top: 30px;
+	}
+
 	.pricingSection h4 {
 		font-size: 0.875rem;
 		text-align: center;
@@ -509,6 +520,11 @@
 	.pricingSection h2 {
 		font-size: 1.8rem;
 		text-align: center;
+		margin-bottom: 0;
+	}
+
+	.pricingCards{
+		max-width: 678px;
 	}
 
 	.pricingCardsItem {
@@ -533,9 +549,21 @@
 		margin-top: 100;
 	}
 
+	.whyMintyCTA {
+		justify-content: center;
+		font-size: 0.775rem;
+	}
+
 	.testimonials h1 {
-		margin-top: 40;
+		margin-top: 20px;
 		margin-bottom: 60px;
+		font-size: 2rem;
+	}
+
+	.testimonialCards {
+		flex-direction: column;
+		align-items: center;
+		margin-bottom: 40px;
 	}
 
 	.testimonialCardItem {
@@ -553,73 +581,70 @@
 		margin-top: 20px;
 	}
 
-	.mobileNavBtn {
-		display: block;
-		cursor: pointer;
-	}
-
 	.nav {
 		margin-top: 25px;
 		/* align-items: baseline; */
 	}
 
-	.navLinks {
-		position: absolute;
-		left: 0;
-		top: 8vh;
-		height: 89vh;
-		background-color: #3b4b5b;
-		color: white;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		width: 40%;
-		transform: translateX(-100%);
-		transition: transform 0.5s ease-in;
-	}
-
-	.navLinks li {
-		opacity: 0;
-	}
-
-	.navActive {
-		transform: translateX(0);
-	}
 }
 
 /* MOBILE SCREENS */
 @media screen and (max-width: 425px) {
-	.metrics {
-	}
-
-	.metricsCard {
-	}
-
-	.metricsCard h2 {
-	}
-
 	.pitchDeck {
 		padding: 0 40px;
 	}
 
-	.pitchDeck .pitchDeckCard {
+	.content h1 {
+		text-align: center;
+		font-size: 1.7rem;
 	}
 
-	.pitchDeck .pitchDeckCard h2 {
+	.content p {
+		text-align: center;
+		font-size: 0.875rem;
 	}
 
-	.pitchDeck .pitchDeckCard p {
+	.content :nth-child(4) {
+		font-size: 0.875rem;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	
+	.content :nth-child(5) {
+		font-size: 0.875rem;
 	}
 
-	.content h1,
-	.content p,
-	.aboutServicesOne,
+	.aboutServices {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.aboutServicesOne {
+		text-align: center;
+	}
+
+	.aboutServicesOne h4 {
+		font-size: 1.125rem;
+	}
+	
+	.aboutServicesTwo h4 {
+		font-size: 1.125rem;
+	}
+
 	.aboutServicesTwo {
 		text-align: center;
 	}
 
+	.aboutServicesTwo {
+		margin-left: 0;
+	}
+
 	.services0ne .content {
 		padding: 0 40px;
+	}
+
+	.servicesOneTitle {
+
 	}
 
 	.aboutServicesOne {
@@ -634,39 +659,35 @@
 		padding: 0 40px;
 	}
 
-	.pricingSection h4 {
-	}
-
-	.pricingSection h2 {
-	}
-
-	.pricingCardsItem {
-	}
-
-	.pricingCardsItem .content p {
-	}
-
-	.pricingCardsIcon {
-	}
-
-	.pricingCardsItem h2 {
+	.pricingSection {
+		margin-top: 0;
 	}
 
 	.whyMinty {
 		padding: 0 40px;
 	}
 
-	.testimonials h1 {
-		font-size: 1.5rem;
-		margin-top: 190px;
-		text-align: center;
-		padding: 0 40px;
-		margin-bottom: 40px;
-		line-height: 1.3;
-		/* max-width: 390px; */
+	.whyMinty .content h1 {
+		font-size: 1.7rem;
 	}
 
-	.testimonialCardItem {
+	.testimonials h1 {
+		font-size: 1.7rem;
+		margin-bottom: 40px;
+		max-width: 380px;
+		line-height: 1.3;
+		margin: 40px auto;
+		/* text-align: center; */
+		/* margin-right: 0; */
+	}
+
+	.clientTitle {
+		font-size: 0.875rem;
+	}
+
+	.clientReview {
+		font-size: 0.875rem;
+		margin-top: 36px;
 	}
 
 	.heroContent h1 {
