--- a/styles/PreFooter.module.css
+++ b/styles/PreFooter.module.css
@@ -16,3 +16,15 @@
 .preFooterIcon {
 	font-size: 63.59px;
 } 
+
+@media screen and (max-width: 425px) {
+	.preFooter {
+		padding: 32px 40px;
+	}
+
+	.preFooter .content a {
+		font-size: 0.875rem;
+		text-decoration: underline;
+		text-underline-offset: 2px;
+	}
+}
