--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,22 +1,3 @@
-/* #tsparticles {
-	height: 100vh!important;
-	position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    padding: 0;
-    margin: 0;
-    z-index: 0;
-}
-
-.nav .heroContent {
-	position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 100
-} */
-
 .navLinks .active {
 	color: red;
 	text-decoration: none;
@@ -69,12 +50,12 @@
 	width: 173px;
 	margin-right: 16px;
 	background-color: transparent;
-	color: #000000;
+	color: #fff;
 	font-size: 1rem;
 	font-weight: 500;
 	/* outline: #000000; */
 	/* border: none; */
-	border: 1px solid #3b4b5b;
+	border: 1px solid #fff;
 	font-family: "Poppins", sans-serif !important;
 	cursor: pointer;
 }
@@ -98,11 +79,17 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
+	width: 100%;
+	position: absolute;
+	left: 50%;
+    transform: translateX(-50%);
+	z-index: 1;
 }
 
 .navLinks {
 	display: flex;
 	padding: 0;
+	color: #fff;
 }
 
 .navLinks li {
@@ -118,32 +105,23 @@
 }
 
 .heroContent {
-	display: flex;
-	flex-direction: column;
+	/* display: flex; */
+	/* flex-direction: column; */
 	margin: auto;
-	/* align-items: center; */
-	/* justify-content: center; */
 	max-width: 730px;
 	text-align: center;
-	margin-top: 30px;
+	/* margin-top: 30px; */
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	/* z-index: 1; */
 }
-
-.heroContentContainer {
-
-}
-
-/* 
-.heroContent > div {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-} */
 
 .heroContent p {
 	max-width: 540px;
 	margin: auto;
+	color: #fff;
 }
 
 .heroContent h1 {
@@ -151,9 +129,18 @@
 	line-height: 60px;
 	/* margin: 24px; */
 	max-width: 730px;
+	color: #fff;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 1024px) {
+	.heroContent h1 {
+		margin-bottom: 20px;
+		font-size: 3rem;
+		width: 620px;
+	}
+}
+
+@media screen and (max-width: 768px) {
 	.nav {
 		display: flex;
 		justify-content: space-around;
@@ -166,14 +153,15 @@
 		left: 0;
 		top: 8vh;
 		height: 89vh;
-		background-color: #3b4b5b;
+		background-color: #4c4c4c;
 		color: white;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		width: 40%;
-		transform: translateX(-100%);
+		transform: translateX(-300%);
 		transition: transform 0.3s ease-in;
+		z-index: 3;
 	}
 
 	.navLinks li {
@@ -184,23 +172,20 @@
 		transform: translateX(0);
 	}
 
-	.heroContent h1 {
-		margin-bottom: 20px;
-	}
-
 	.headerBtns {
 		padding: 30px;
 	}
 }
 
-@media  screen and (max-width: 425px) {
+@media screen and (max-width: 425px) {
 	.heroContent {
 		max-width: 370px;
 	}
 
 	.heroContent h1 {
-		font-size: 2.5rem;
+		font-size: 2.3rem;
 		line-height: 1;
+		max-width: 384px;
 	}
 
 	.heroContent p {
@@ -222,8 +207,19 @@
 	}
 }
 
-@media screen and (max-width:375px) {
+@media screen and (max-width: 375px) {
 	.heroContent h1 {
 		padding: 0 20px;
 	}
+}
+
+/* TS PARTICLES */
+#tsparticles {
+	height: 100vh;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	z-index: 0;
 }
