--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -368,7 +368,9 @@
 }
 
 .clientReview {
-	margin-top: 58px;
+	margin-top: 29px;
+    font-size: 0.875rem;
+    opacity: 0.7;
 }
 
 /* PRE FOOTER */
@@ -565,13 +567,13 @@
 	}
 
 	.whyMintyCTA {
-		justify-content: flex-start;
+		justify-content: center;
 		font-size: 0.775rem;
 	}
 
 	.testimonials h1 {
 		margin-top: 20px;
-		margin-bottom: 60px;
+		margin-bottom: 26px;
 		font-size: 2rem;
 	}
 
@@ -687,6 +689,11 @@
 	.whyMinty .content h1 {
 		font-size: 1.7rem;
 	}
+
+	.whyMintyCTA {
+		font-size: 0.675rem;
+	}
+
 
 	.testimonials h1 {
 		font-size: 1.7rem;
