--- a/styles/PreFooter.module.css
+++ b/styles/PreFooter.module.css
@@ -1,6 +1,6 @@
 /* PRE FOOTER */
 .preFooter {
-	background: #f2f8ff;
+	background: #FAF9F6;
 	width: 100%;
 	/* max-height: 273px; */
 	text-align: center;
