--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -29,6 +29,8 @@
 	align-items: center;
 	padding: 15px 0;
 	margin-top: -50px;
+	background: #FAF9F6;
+    margin: 20px auto;
 }
 
 .servicesSectionOne .content {
@@ -54,7 +56,7 @@
 	flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-	margin-bottom: 50px;
+	margin: 85px;
 }
 
 .aboutServicesSectionThree {
@@ -83,6 +85,7 @@
 	text-align: center;
 	padding-top: 35px;
     padding-bottom: 65px;
+	background: #FAF9F6;
 }
 
 .servicesPageCTAOne h1 {
@@ -179,6 +182,7 @@
 	.aboutServicesSectionThree {
 		flex-direction: column;
 		align-items: center;
+		padding: 0 30px;
 	}
 
 	.servicesSectionThree .content {
