--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -144,7 +144,7 @@
 	}
 
 	.servicesPageCTAOne {
-		padding-bottom: 0;
+		/* padding-bottom: 0; */
 	}
 
 	.servicesPageCTAOne h1 {
@@ -174,19 +174,30 @@
 		/* text-align: center; */
 	}
 
+	.servicesSectionTwo {
+		margin-top: 30px;
+		margin-bottom: 60px;
+	}
+
 	.servicesSectionTwo .content {
-		padding: 0 40px;
+		padding-left: 40px;
+		padding-right: 40px;
+		padding-bottom: 40px;
 		text-align: center;
+	}
+
+	.servicesSectionThree {
+		margin: 50px;
 	}
 
 	.aboutServicesSectionThree {
 		flex-direction: column;
 		align-items: center;
-		padding: 0 30px;
+		padding: 0 3px;
 	}
 
 	.servicesSectionThree .content {
-		padding: 0 40px;
+		/* padding: 0 40px; */
 	}
 
 	.servicesSectionTwo p {
