--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -5,13 +5,14 @@
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 	margin-top: 40px;
-	margin-bottom: 40px;
+	margin-bottom: 13px;
 }
 
 .footer1 ul li,
 .footer2 ul li,
 .footer3 ul li {
 	list-style: none;
+	margin-top: 5px;
 }
  
 .footer1 {
@@ -55,6 +56,24 @@
 	margin-top: 75px;
 }
 
+.copyright {
+	display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 0.875rem;
+	opacity: 0.7;
+}
+
+@media screen and (max-width: 768px) {
+	.footer1 ul, .footer2 ul, .footer3 ul {
+		font-size: 0.675rem;
+	}
+
+	.copyright {	
+		font-size: 0.675rem;
+	}
+}
+
 @media screen and (max-width:425px) {
 	.footer {
 		flex-direction: column;
@@ -68,5 +87,13 @@
 	.footer3 {
 		margin-top: 0;
 		font-size: 0.875rem;
+	}
+
+	.copyright {	
+		flex-direction: column;
+	}
+
+	.copyright > p {
+		margin-top: 0;
 	}
 }
