--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -288,7 +288,7 @@
 }
 
 .pricingCardsBtn {
-	width: 312px;
+	width: 285px;
 	background-color: #3b4b5b;
 	color: #ffffff;
 	outline: none;
@@ -341,8 +341,6 @@
 /* TESTIMONIALS */
 .testimonials {
 	width: 100%;
-	/* height: 788px; */
-	/* margin: 70px auto; */
 }
 
 .testimonials h1 {
@@ -439,8 +437,13 @@
 /* SMALL LAPTOP VIEW */
 @media screen and (max-width:1024px) {
 	.whyMinty {
-		display: flex;
 		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.whyMintyCTA {
+		justify-content: flex-start;
 	}
 
 	.testimonials h1 {
@@ -458,6 +461,11 @@
 
 /* TABLET VIEW */
 @media screen and (max-width: 768px) {
+	.whyMinty {
+		display: flex;
+		flex-direction: column;
+	}
+
 	.scheduleACallBtn {
 		width: 130px;
 		font-size: 0.775rem;
@@ -579,6 +587,10 @@
 	.whyMintyCTA {
 		justify-content: center;
 		font-size: 0.775rem;
+	}
+
+	.testimonials {
+		margin-bottom: 30px;
 	}
 
 	.testimonials h1 {
@@ -716,8 +728,7 @@
 		max-width: 380px;
 		line-height: 1.3;
 		margin: 11px auto;
-		/* text-align: center; */
-		/* margin-right: 0; */
+		margin-top: 30px;
 	}
 
 	.clientTitle {
@@ -749,5 +760,11 @@
 @media screen and (max-width: 375px) {
 	.pitchDeck {
 		padding: 0 20px;
+	}
+
+	.testimonials h1 {
+		/* font-size: 1.4rem; */
+		max-width: 330px;
+		margin-top: 25px;
 	}
 }
