--- a/styles/PreFooter.module.css
+++ b/styles/PreFooter.module.css
@@ -2,8 +2,9 @@
 .preFooter {
 	background: #FAF9F6;
 	width: 100%;
-	/* max-height: 273px; */
 	text-align: center;
+	padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .preFooter .content {
