--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -3,7 +3,7 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	padding: 15px 0;
+	padding: 46px 0;
 }
 
 .servicesSectionOne .content ul {
@@ -27,7 +27,8 @@
 	flex-wrap: wrap-reverse;
 	justify-content: center;
 	align-items: center;
-	padding: 15px 0;
+	padding-top: 15px;
+    padding-bottom: 60px;
 	margin-top: -50px;
 	background: #FAF9F6;
     margin: 20px auto;
@@ -61,7 +62,7 @@
 
 .aboutServicesSectionThree {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	margin-top: 40px;
 }
 
@@ -83,9 +84,9 @@
 
 .servicesPageCTAOne {
 	text-align: center;
-	padding-top: 35px;
-    padding-bottom: 65px;
-	background: #FAF9F6;
+    padding-top: 56px;
+    padding-bottom: 76px;
+    background: #FAF9F6;
 }
 
 .servicesPageCTAOne h1 {
@@ -105,12 +106,17 @@
 	font-size: 1.125rem;
     display: flex;
     justify-content: center;
-    /* align-items: baseline; */
+	align-items: center;
+	margin-left: 5px;
+    margin-right: 5px;
 }
 
 .servicesPageCTAOne div > a {
 	padding-left: 5px;
     padding-right: 5px;
+	text-decoration: underline;
+    text-underline-offset: 2px;
+    font-size: 1rem;
 }
 
 .teamPhoto {
@@ -123,18 +129,32 @@
 	margin-bottom: 80px;
 }
 
+.servicesPageCTATwo div {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .servicesPageCTATwo a {
-	font-size: 1.125rem;
+	font-size: 1rem;
+    text-decoration: underline;
+    text-underline-offset: 2px;
+	padding: 10px;
 }
 
 @media screen and (max-width:1024px) {
 	.servicesSectionTwo {
-		margin-top: 0px;
+		margin-top: 22px;
+		padding-bottom: 88px;
 	}
 
 	.servicesSectionThree {
 		margin-top: 70px;
 	}
+
+	.servicesPageCTATwo {
+		margin-bottom: 70px;
+	}	
 }
 
 @media screen and (max-width:768px) {
@@ -169,6 +189,10 @@
 }
  
 @media  screen and (max-width: 425px) {
+	.servicesSectionOne {
+		padding: 20px;
+	}
+
 	.servicesSectionOne .content {
 		padding: 0 40px;
 		/* text-align: center; */
@@ -177,6 +201,7 @@
 	.servicesSectionTwo {
 		margin-top: 30px;
 		margin-bottom: 60px;
+		padding: 20px;
 	}
 
 	.servicesSectionTwo .content {
@@ -243,5 +268,15 @@
 	.aboutServicesSectionThree :nth-child(2) {
 		max-width: 340px;
 		margin-top: 16px;
+	}
+}
+
+@media screen and (max-width:375px) {
+	.servicesSectionOne {
+		padding: 10px;
+	}
+
+	.servicesSectionTwo {
+		padding: 10px;
 	}
 }
