--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -136,8 +136,9 @@
 @media screen and (max-width: 1024px) {
 	.heroContent h1 {
 		margin-bottom: 20px;
-		font-size: 3rem;
-		width: 620px;
+		font-size: 2.3rem;
+		width: 511px;
+		line-height: 1.2;
 	}
 }
 
@@ -184,7 +185,7 @@
 	}
 
 	.heroContent h1 {
-		font-size: 2.3rem;
+		font-size: 2.2rem;
 		line-height: 1;
 		max-width: 365px;
 	}
