--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -80,7 +80,7 @@
 	max-width: 380px;
 	/* max-height: 380px; */
 	height: auto;
-	background-color: #FAF9F6;
+	background-color: #faf9f6;
 }
 
 .card:hover,
@@ -117,7 +117,8 @@
 	justify-content: center;
 	flex-wrap: wrap-reverse;
 	align-items: center;
-	margin: 40px auto;
+	margin-top: 40px;
+    margin-bottom: 90px;
 }
 
 .services0ne .content {
@@ -139,8 +140,9 @@
 
 .aboutServicesOne a {
 	font-size: 0.775rem;
-    text-decoration: underline;
-    text-underline-offset: 5px;
+	text-decoration: underline;
+	text-underline-offset: 5px;
+	color: #464EA4;
 }
 
 .aboutServices p {
@@ -165,11 +167,11 @@
 	/* max-height: 520px; */
 	/* margin-top: 36px; */
 	/* margin-bottom: 58px; */
-	background: #FAF9F6;
-    color: #333;
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+	background: #faf9f6;
+	color: #333;
+	width: 100%;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .servicesTwo .content {
@@ -300,19 +302,18 @@
 	display: flex;
 	flex-wrap: wrap-reverse;
 	justify-content: center;
-	/* max-height: 622px; */
+	align-items: center;
 	margin-top: 15px;
-    margin-bottom: 40px;
-	/* max-width: 1072px; */
-	background: #FAF9F6;
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 131px;
+	margin-bottom: 40px;
+	background: #faf9f6;
+	width: 100%;
+	padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .whyMinty .content {
 	max-width: 572px;
-	max-height: 356px;
+	/* max-height: 356px; */
 }
 
 .whyMinty .content h1 {
@@ -328,8 +329,8 @@
 	align-items: center;
 	justify-content: flex-start;
 	font-size: 1.125rem;
-    text-decoration: underline;
-    text-underline-offset: 5px;
+	text-decoration: underline;
+	text-underline-offset: 5px;
 }
 
 .whyMintyCTAIcon {
@@ -360,7 +361,7 @@
 .testimonialCardItem {
 	max-width: 350px;
 	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-	box-shadow:  0px 2px rgba(0, 101, 242, 0.1), 0px 1px 4px rgba(0, 101, 242, 0.1);
+	box-shadow: 0px 2px rgba(0, 101, 242, 0.1), 0px 1px 4px rgba(0, 101, 242, 0.1);
 	padding: 24px;
 }
 
@@ -374,8 +375,8 @@
 
 .clientReview {
 	margin-top: 29px;
-    font-size: 0.875rem;
-    opacity: 0.7;
+	font-size: 0.875rem;
+	opacity: 0.7;
 }
 
 /* PRE FOOTER */
@@ -405,7 +406,7 @@
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 	margin-top: 40px;
-    margin-bottom: 40px;
+	margin-bottom: 40px;
 }
 
 .footer1 {
@@ -423,7 +424,8 @@
 	flex-direction: column;
 }
 
-.footer2, .footer3 {
+.footer2,
+.footer3 {
 	margin-top: 75px;
 }
 
@@ -433,7 +435,7 @@
 }
 
 /* SMALL LAPTOP VIEW */
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
 	.whyMinty {
 		flex-direction: column;
 		justify-content: center;
@@ -520,6 +522,12 @@
 		padding: 30px;
 	}
 
+	.designParagragh {
+	}
+
+	.seoParagragh {
+	}
+
 	.pitchDeck .pitchDeckCard h2 {
 		font-size: 1.1rem;
 	}
@@ -528,9 +536,23 @@
 		font-size: 0.875rem;
 	}
 
-	.content h1,
-	.content p,
-	.aboutServicesOne,
+	.content h1 {
+		text-align: center;
+	}
+
+	/* .content p {
+		text-align: center;
+	} */
+
+	.servicesOne {
+		margin-top: 40px;
+		margin-bottom: 65px;
+	}
+
+	.aboutServicesOne {
+		text-align: center;
+	}
+
 	.aboutServicesTwo {
 		text-align: center;
 	}
@@ -554,7 +576,7 @@
 		margin-bottom: 0;
 	}
 
-	.pricingCards{
+	.pricingCards {
 		max-width: 678px;
 		margin-bottom: 50px;
 	}
@@ -583,7 +605,7 @@
 	}
 
 	.whyMintyCTA {
-		justify-content: center;
+		justify-content: flex-start;
 		font-size: 0.775rem;
 	}
 
@@ -622,7 +644,6 @@
 		margin-top: 25px;
 		/* align-items: baseline; */
 	}
-
 }
 
 /* MOBILE SCREENS */
@@ -634,11 +655,20 @@
 	.content h1 {
 		text-align: center;
 		font-size: 1.7rem;
+		margin-top: 35px;
 	}
 
-	.content p {
+	/* .content p {
 		text-align: center;
 		font-size: 0.875rem;
+	} */
+
+	.whyMinty .content {
+		text-align: center;
+	}
+
+	.whyMintySubHeading {
+		font-size: 1.3rem;
 	}
 
 	.content :nth-child(4) {
@@ -646,7 +676,7 @@
 		padding-top: 10px;
 		padding-bottom: 10px;
 	}
-	
+
 	.content :nth-child(5) {
 		font-size: 0.875rem;
 	}
@@ -662,10 +692,13 @@
 
 	.aboutServicesOne h4 {
 		font-size: 1.125rem;
+		margin-bottom: 0px;
+		margin-top: 0;
 	}
-	
+
 	.aboutServicesTwo h4 {
 		font-size: 1.125rem;
+		margin-bottom: 0;
 	}
 
 	.aboutServicesTwo {
@@ -682,7 +715,10 @@
 
 	.servicesTwo .content p {
 		font-size: 0.875rem;
-		padding: 0 40px;
+		/* padding: 0 40px; */
+		text-align: center;
+		margin-top: 5px;
+		max-width: fit-content;
 	}
 
 	.servicesOneCTA {
@@ -697,6 +733,7 @@
 	.aboutServicesTwo {
 		margin-right: 0;
 		max-width: 309px;
+		margin-top: 10px;
 	}
 
 	.servicesTwo {
@@ -717,8 +754,8 @@
 
 	.whyMintyCTA {
 		font-size: 0.675rem;
+		justify-content: center;
 	}
-
 
 	.testimonials h1 {
 		font-size: 1.7rem;
@@ -749,7 +786,9 @@
 		max-width: 370px;
 	}
 
-	.footer1, .footer2, .footer3 {
+	.footer1,
+	.footer2,
+	.footer3 {
 		min-width: 365px;
 		margin-top: 10px;
 	}
