changed bg color on sections to light blue and removed link from footer plus bold email

--- a/styles/PreFooter.module.css
+++ b/styles/PreFooter.module.css
@@ -1,6 +1,6 @@
 /* PRE FOOTER */
 .preFooter {
-	background: #FAF9F6;
+	background: #EEF6FE;
 	width: 100%;
 	text-align: center;
 	padding-top: 30px;
