--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -80,7 +80,7 @@
 	max-width: 380px;
 	/* max-height: 380px; */
 	height: auto;
-	background-color: #faf9f6;
+	background-color: #EEF6FE;
 }
 
 .card:hover,
@@ -118,7 +118,7 @@
 	flex-wrap: wrap-reverse;
 	align-items: center;
 	margin-top: 40px;
-    margin-bottom: 90px;
+    margin-bottom: 107px;
 }
 
 .services0ne .content {
@@ -151,6 +151,7 @@
 
 .aboutServices {
 	display: flex;
+	justify-content: space-between;
 }
 
 .aboutServicesOne {
@@ -167,7 +168,7 @@
 	/* max-height: 520px; */
 	/* margin-top: 36px; */
 	/* margin-bottom: 58px; */
-	background: #faf9f6;
+	/* background: #EEF6FE; */
 	color: #333;
 	width: 100%;
 	padding-top: 50px;
@@ -176,6 +177,7 @@
 
 .servicesTwo .content {
 	max-width: 445px;
+	margin-left: 99px;
 }
 
 .servicesTwo .content p {
@@ -196,8 +198,6 @@
 
 .aboutServicesTwo {
 	max-width: 190px;
-	margin-right: 20px;
-	margin-left: 20px;
 }
 
 /* PRICING */
@@ -231,7 +231,7 @@
 	column-gap: 55px;
 	justify-content: space-around;
 	margin-top: 31px;
-	margin-bottom: 70px;
+	margin-bottom: 101px;
 }
 
 .pricingCardsItem {
@@ -305,10 +305,10 @@
 	align-items: center;
 	margin-top: 15px;
 	margin-bottom: 40px;
-	background: #faf9f6;
+	background: #EEF6FE;
 	width: 100%;
 	padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 80px;
 }
 
 .whyMinty .content {
@@ -446,6 +446,10 @@
 		justify-content: flex-start;
 	}
 
+	.servicesTwo .content {
+		margin-left: 0;
+	}
+
 	.testimonials h1 {
 		margin-top: 40px;
 	}
@@ -464,6 +468,18 @@
 	.whyMinty {
 		display: flex;
 		flex-direction: column;
+	}
+
+	.whyMintySubHeading {
+		text-align: center;
+	}
+
+	.whyMinty .content :nth-child(4) {
+		text-align: center;
+	}
+	
+	.whyMinty .content :nth-child(5) {
+		text-align: center;
 	}
 
 	.scheduleACallBtn {
@@ -605,7 +621,7 @@
 	}
 
 	.whyMintyCTA {
-		justify-content: flex-start;
+		justify-content: center;
 		font-size: 0.775rem;
 	}
 
@@ -668,7 +684,7 @@
 	}
 
 	.whyMintySubHeading {
-		font-size: 1.3rem;
+		font-size: 1.2rem;
 	}
 
 	.content :nth-child(4) {
